[gd_scene load_steps=9 format=3 uid="uid://4b3q7kq84kuh"]

[ext_resource type="Script" path="res://addons/card_editor/card_editor.gd" id="1_m4cus"]
[ext_resource type="PackedScene" uid="uid://bxnux2yembvh3" path="res://Scenes/Utility/editor_panel.tscn" id="2_1paog"]
[ext_resource type="Shader" path="res://Shaders/make_white.gdshader" id="2_3xmtf"]
[ext_resource type="Script" path="res://addons/card_editor/CardEditorMainPanel.gd" id="3_poy8b"]
[ext_resource type="Texture2D" uid="uid://cda5gd7uu0kka" path="res://art/add_icon.svg" id="3_re3uu"]
[ext_resource type="PackedScene" uid="uid://d241it0v4sl7g" path="res://addons/card_editor/effect_list.tscn" id="4_r2trk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qto8b"]
shader = ExtResource("2_3xmtf")

[sub_resource type="LabelSettings" id="LabelSettings_4ep76"]
font_color = Color(0.976471, 0, 0, 1)

[node name="CardEditor" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4cus")

[node name="EditorPanel" parent="." instance=ExtResource("2_1paog")]
layout_mode = 2
size_flags_horizontal = 3
root_subfolder = &"res://Cards"

[node name="CardEditorMainPanel" type="VBoxContainer" parent="EditorPanel"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_poy8b")

[node name="GridContainer" type="GridContainer" parent="EditorPanel/CardEditorMainPanel"]
layout_mode = 2
columns = 2

[node name="CardNameLabel" type="Label" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Card name"

[node name="CardNameEdit" type="LineEdit" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Card name required!"

[node name="CardCostLabel" type="Label" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
text = "Card Energy Cost"

[node name="CardCostEdit" type="SpinBox" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
value = 1.0
rounded = true
custom_arrow_step = 1.0

[node name="CardManaCostLabel" type="Label" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
text = "Card Mana Cost"

[node name="CardManaCostEdit" type="SpinBox" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
rounded = true
custom_arrow_step = 1.0

[node name="CardCostLabel2" type="Label" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
text = "Card Money Cost"

[node name="CardCostEdit2" type="SpinBox" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
max_value = 9.22337e+18
value = 50.0
rounded = true
custom_arrow_step = 1.0

[node name="CardRarityLabel" type="Label" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
text = "Card rarity"

[node name="CardRarityEdit" type="SpinBox" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2
max_value = 9.22337e+18
rounded = true
custom_arrow_step = 1.0

[node name="EffectsLabel" type="Label" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2

[node name="EffectsBoxList" type="HBoxContainer" parent="EditorPanel/CardEditorMainPanel/GridContainer"]
layout_mode = 2

[node name="OnPlayCheckBox" type="CheckBox" parent="EditorPanel/CardEditorMainPanel/GridContainer/EffectsBoxList"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "On Play"

[node name="OnDrawCheckBox" type="CheckBox" parent="EditorPanel/CardEditorMainPanel/GridContainer/EffectsBoxList"]
unique_name_in_owner = true
layout_mode = 2
text = "On Draw
"

[node name="OnDiscardCheckBox" type="CheckBox" parent="EditorPanel/CardEditorMainPanel/GridContainer/EffectsBoxList"]
unique_name_in_owner = true
layout_mode = 2
text = "On Discard"

[node name="PlayableCheckbox" type="CheckBox" parent="EditorPanel/CardEditorMainPanel/GridContainer/EffectsBoxList"]
layout_mode = 2
button_pressed = true
text = "Playable"

[node name="PlayEffectList" parent="EditorPanel/CardEditorMainPanel" instance=ExtResource("4_r2trk")]
unique_name_in_owner = true
layout_mode = 2

[node name="DrawEffectList" parent="EditorPanel/CardEditorMainPanel" instance=ExtResource("4_r2trk")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DiscardEffectList" parent="EditorPanel/CardEditorMainPanel" instance=ExtResource("4_r2trk")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TagsGrid" type="GridContainer" parent="EditorPanel/CardEditorMainPanel"]
layout_mode = 2
columns = 2

[node name="TagLabel" type="Label" parent="EditorPanel/CardEditorMainPanel/TagsGrid"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Tags"

[node name="TagAddContainer" type="HBoxContainer" parent="EditorPanel/CardEditorMainPanel/TagsGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddTagButton" type="TextureButton" parent="EditorPanel/CardEditorMainPanel/TagsGrid/TagAddContainer"]
material = SubResource("ShaderMaterial_qto8b")
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture_normal = ExtResource("3_re3uu")
ignore_texture_size = true
stretch_mode = 4

[node name="TagEdit" type="LineEdit" parent="EditorPanel/CardEditorMainPanel/TagsGrid/TagAddContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="EditorPanel/CardEditorMainPanel/TagsGrid"]
layout_mode = 2

[node name="TagList" type="HBoxContainer" parent="EditorPanel/CardEditorMainPanel/TagsGrid"]
layout_mode = 2

[node name="PoolsLabel" type="Label" parent="EditorPanel/CardEditorMainPanel/TagsGrid"]
layout_mode = 2
text = "Pools"

[node name="PoolsAddContainer" type="HBoxContainer" parent="EditorPanel/CardEditorMainPanel/TagsGrid"]
layout_mode = 2

[node name="AddPoolButton" type="TextureButton" parent="EditorPanel/CardEditorMainPanel/TagsGrid/PoolsAddContainer"]
material = SubResource("ShaderMaterial_qto8b")
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture_normal = ExtResource("3_re3uu")
ignore_texture_size = true
stretch_mode = 4

[node name="PoolEdit" type="LineEdit" parent="EditorPanel/CardEditorMainPanel/TagsGrid/PoolsAddContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PoolSpacer" type="Control" parent="EditorPanel/CardEditorMainPanel/TagsGrid"]
layout_mode = 2

[node name="PoolList" type="HBoxContainer" parent="EditorPanel/CardEditorMainPanel/TagsGrid"]
layout_mode = 2

[node name="Errors" type="Label" parent="EditorPanel/CardEditorMainPanel"]
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_4ep76")

[node name="Feedback" type="Label" parent="EditorPanel/CardEditorMainPanel"]
layout_mode = 2

[connection signal="load_required" from="EditorPanel" to="." method="_on_file_dialog_file_selected"]
[connection signal="new_required" from="EditorPanel" to="." method="_on_reset_button_pressed"]
[connection signal="save_required" from="EditorPanel" to="." method="_on_editor_panel_save_required"]
[connection signal="text_changed" from="EditorPanel/CardEditorMainPanel/GridContainer/CardNameEdit" to="EditorPanel/CardEditorMainPanel" method="_on_card_name_edit_text_submitted"]
[connection signal="text_submitted" from="EditorPanel/CardEditorMainPanel/GridContainer/CardNameEdit" to="EditorPanel/CardEditorMainPanel" method="_on_card_name_edit_text_submitted"]
[connection signal="toggled" from="EditorPanel/CardEditorMainPanel/GridContainer/EffectsBoxList/OnPlayCheckBox" to="EditorPanel/CardEditorMainPanel" method="_on_on_play_check_box_toggled"]
[connection signal="toggled" from="EditorPanel/CardEditorMainPanel/GridContainer/EffectsBoxList/OnDrawCheckBox" to="EditorPanel/CardEditorMainPanel" method="_on_on_draw_check_box_toggled"]
[connection signal="toggled" from="EditorPanel/CardEditorMainPanel/GridContainer/EffectsBoxList/OnDiscardCheckBox" to="EditorPanel/CardEditorMainPanel" method="_on_on_discard_check_box_toggled"]
[connection signal="pressed" from="EditorPanel/CardEditorMainPanel/TagsGrid/TagAddContainer/AddTagButton" to="EditorPanel/CardEditorMainPanel" method="_on_add_tag_button_pressed"]
[connection signal="text_submitted" from="EditorPanel/CardEditorMainPanel/TagsGrid/TagAddContainer/TagEdit" to="EditorPanel/CardEditorMainPanel" method="_on_tag_edit_text_submitted"]
[connection signal="pressed" from="EditorPanel/CardEditorMainPanel/TagsGrid/PoolsAddContainer/AddPoolButton" to="EditorPanel/CardEditorMainPanel" method="_on_add_pool_button_pressed"]
[connection signal="text_submitted" from="EditorPanel/CardEditorMainPanel/TagsGrid/PoolsAddContainer/PoolEdit" to="EditorPanel/CardEditorMainPanel" method="_on_pool_edit_text_submitted"]
